--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
+// @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital@1&family=IBM+Plex+Sans+JP&family=Roboto&display=swap');
 
 html {
   scroll-behavior: smooth;
@@ -7,6 +8,9 @@ html {
 html,
 body {
   font-family: "Montserrat", sans-serif;
+  // font-family: 'Bodoni Moda', serif;
+  // font-family: 'IBM Plex Sans JP', sans-serif;
+  // font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: $font-regular;
   line-height: 1.3;
