--- a/assets/scss/organisms/_spin-wheel.scss
+++ b/assets/scss/organisms/_spin-wheel.scss
@@ -143,7 +143,7 @@
         padding-bottom: $spacer-3;
 
         h4 {
-            font-size: 30px;
+            font-size: 35px;
             font-weight: $font-bold;
         }
     }
@@ -164,15 +164,21 @@
     }
 
     &__players {
-        margin-bottom: $spacer-2;
+        margin-bottom: $spacer-4;
 
         p {
-            margin-bottom: 0;
+            margin-bottom: $spacer-1;
         }
 
         &:last-child {
             margin-bottom: 0;
         }
+    }
+
+    &__prizedetail {
+        font-size: 16px;
+        font-weight: $font-bold;
+        color: $color-grey;
     }
 
     &__date {
@@ -280,8 +286,9 @@
 
     // modal style
     &__modal {
+
         .modal-dialog {
-            max-width: 600px;
+            max-width: 800px;
         }
 
         .modal-content {
@@ -301,7 +308,7 @@
 
         .modal-footer {
             position: relative;
-            padding-top: 0;
+            padding-top: $spacer-3;
             border: 0;
             display: flex;
             justify-content: center;
@@ -340,13 +347,15 @@
     &__prize {
         font-size: 25px;
         font-weight: $font-semi-bold;
-        margin-bottom: $spacer-2;
+        margin-bottom: $spacer-1;
     }
 
     &__winner {
+
+        // font-family: 'Bodoni Moda', serif;
         font-size: 40px;
         font-weight: $font-bold;
-        margin-bottom: $spacer-2;
+        margin-bottom: $spacer-1;
         font-family: 'PP Eiko Italic';
         font-style: italic;
     }
@@ -360,6 +369,25 @@
         left: 0;
         top: 0;
         z-index: 0;
+    }
+
+    &__winnerouter {
+        display: flex;
+        justify-content: center;
+        padding-top: $spacer-3;
+    }
+
+    &__winnersec {
+        margin: 0 $spacer-5;
+        font-size: 22px;
+
+        .wu-spin-wheel__prize {
+            font-size: 22px;
+        }
+
+        .wu-spin-wheel__winner {
+            font-size: 35px;
+        }
     }
 
     // spin class
@@ -397,7 +425,7 @@
         // }
 
         .wu-spin-wheel__discwrap {
-            transform: scale(1.3) translateY(-40px);
+            transform: scale(1.3) translateY(40px);
             transition: 0.3s;
         }
 
@@ -431,22 +459,24 @@
 
     // price details header starts here
 
-        // todo
-            // to make sure the close btn is positioned in center
-                .wu-spin-wheel__close{
-                    position: absolute;
-                    top: 50%;
-                    right: 0;
-                    transform: translateY(-100%);
-                }
-            // TO alighn the logo to top
-                .wu-spin-wheel__head{
-                    align-items: flex-start;
-                } 
-            // To make sure the spin weel and side boxes seen clearly in the screen
-                .wu-spin-wheel__bodyouter{
-                    height: calc(100vh - 300px);
-                }
+    // todo
+    // to make sure the close btn is positioned in center
+    .wu-spin-wheel__close {
+        position: absolute;
+        top: 30%;
+        right: 0;
+        transform: translateY(-100%);
+    }
+
+    // TO alighn the logo to top
+    .wu-spin-wheel__head {
+        align-items: flex-start;
+    }
+
+    // To make sure the spin weel and side boxes seen clearly in the screen
+    .wu-spin-wheel__bodyouter {
+        height: calc(100vh - 230px);
+    }
 
     .price-details {
         flex: 1;
@@ -457,12 +487,12 @@
         align-items: center;
         transform: translateX(-10%);
 
-        &--hide{
+        &--hide {
             display: none !important;
         }
 
         &__title {
-            font-size: 44px;
+            font-size: 40px;
             font-weight: 900;
             margin-bottom: 16px;
             text-transform: capitalize;
@@ -477,10 +507,10 @@
 
         &__card {
             position: relative;
-            width: calc(25% - 32px);
+            width: calc(25% - 16px);
             min-width: 200px;
             height: auto;
-            margin: 0 16px;
+            margin: 0 8px;
             overflow: hidden;
             border-radius: 30px;
             display: flex;
@@ -495,7 +525,7 @@
                 right: 0;
 
                 video,
-                img{
+                img {
                     width: 100%;
                     height: 100%;
                 }
@@ -509,20 +539,22 @@
                 padding: 24px;
 
             }
+
             &-title {
-                font-size: 32px;
+                font-size: 30px;
                 font-weight: 800;
-                margin-bottom: 16px;
+                margin-bottom: 8px;
                 color: $color-yellow;
             }
 
             &-price {
-                font-size: 22px;
+                font-size: 20px;
                 font-weight: 700;
                 color: $color-yellow;
             }
         }
     }
+
     // price details header ends here
 }
 
@@ -577,12 +609,17 @@
         &__sidetext {
             // font-size: 65px;
             font-size: 45px;
-            margin-bottom: $spacer-3;
+            margin-bottom: $spacer-2;
 
             p {
-                margin-bottom: $spacer-3;
+                margin-bottom: $spacer-2;
             }
         }
+
+        &__prizedetail {
+            font-size: 40px;
+        }
+
 
         &__spinner {
             width: 900px;
@@ -613,7 +650,7 @@
 
         &__modal {
             .modal-dialog {
-                max-width: 1900px;
+                max-width: 2900px;
             }
 
             .modal-body {
@@ -621,12 +658,16 @@
             }
 
             .modal-content {
-                padding: 100px;
+                padding: 120px;
             }
 
             .wu-spin-wheel__btn {
                 margin-top: $spacer-3 !important;
                 padding: $spacer-2 80px;
+            }
+
+            .modal-footer {
+                padding-top: 24px;
             }
         }
 
@@ -635,19 +676,111 @@
         }
 
         &__congrts {
-            font-size: 130px;
+            font-size: 120px;
             margin-bottom: $spacer-3;
         }
 
         &__prize {
-            font-size: 100px;
-            margin-bottom: $spacer-3;
+            font-size: 90px;
+            margin-bottom: $spacer-2;
         }
 
         &__winner {
-            font-size: 180px;
-            margin-bottom: $spacer-3;
+            font-size: 160px;
+            margin-bottom: $spacer-2;
         }
+
+        &__winnersec {
+            margin: 0 $spacer-6;
+            font-size: 60px;
+            padding-top: $spacer-4;
+
+            .wu-spin-wheel__prize {
+                font-size: 70px;
+            }
+
+            .wu-spin-wheel__winner {
+                font-size: 120px;
+            }
+        }
+
+        .price-details {
+            flex: 1;
+            height: 100%;
+            padding: 16px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            transform: translateX(-10%);
+
+            &--hide {
+                display: none !important;
+            }
+
+            &__title {
+                font-size: 110px;
+                font-weight: 900;
+                margin-bottom: 35px;
+                text-transform: capitalize;
+            }
+
+            &__card-wrap {
+                width: 100%;
+                display: flex;
+                // align-items: center;
+                justify-content: center;
+            }
+
+            &__card {
+                position: relative;
+                width: calc(25% - 16px);
+                min-width: 200px;
+                height: auto;
+                margin: 0 8px;
+                overflow: hidden;
+                border-radius: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                &-img {
+                    position: absolute;
+                    bottom: 0;
+                    top: 0;
+                    left: 0;
+                    right: 0;
+
+                    video,
+                    img {
+                        width: 100%;
+                        height: 100%;
+                    }
+                }
+
+                &-cnt {
+                    text-align: center;
+                    height: 100%;
+                    position: relative;
+                    flex: 1 1 auto;
+                    padding: 70px;
+
+                }
+
+                &-title {
+                    font-size: 80px;
+                    font-weight: 800;
+                    margin-bottom: 16px;
+                    color: $color-yellow;
+                }
+
+                &-price {
+                    font-size: 70px;
+                    font-weight: 700;
+                    color: $color-yellow;
+                }
+            }
+        }
+
     }
 }
 
@@ -688,8 +821,12 @@
             margin-bottom: $spacer-3;
 
             p {
-                margin-bottom: $spacer-3;
+                margin-bottom: $spacer-1;
             }
+        }
+
+        &__prizedetail {
+            font-size: 22px;
         }
 
         &__spinner {
@@ -715,13 +852,13 @@
 
         &--spin {
             .wu-spin-wheel__discwrap {
-                transform: scale(1.3) translateY(-80px);
+                transform: scale(1.3) translateY(40px);
             }
         }
 
         &__modal {
             .modal-dialog {
-                max-width: 1200px;
+                max-width: 1600px;
             }
 
             .modal-body {
@@ -743,19 +880,56 @@
         }
 
         &__congrts {
-            font-size: 80px;
+            font-size: 70px;
             margin-bottom: $spacer-3;
         }
 
         &__prize {
-            font-size: 60px;
-            margin-bottom: $spacer-3;
+            font-size: 50px;
+            margin-bottom: $spacer-2;
         }
 
         &__winner {
-            font-size: 120px;
-            margin-bottom: $spacer-3;
+            font-size: 100px;
+            margin-bottom: $spacer-2;
         }
+
+        &__winnersec {
+            margin: 0 $spacer-6;
+            font-size: 40px;
+            padding-top: $spacer-4;
+
+            .wu-spin-wheel__prize {
+                font-size: 40px;
+            }
+
+            .wu-spin-wheel__winner {
+                font-size: 70px;
+            }
+        }
+
+        .price-details {
+            &__title {
+                font-size: 60px;
+            }
+
+            &__card {
+
+                &-cnt {
+                    padding: 35px;
+
+                }
+
+                &-title {
+                    font-size: 40px;
+                }
+
+                &-price {
+                    font-size: 30px;
+                }
+            }
+        }
+
     }
 }
 
@@ -788,6 +962,44 @@
         &__spinner {
             width: 300px;
             height: 300px;
+        }
+
+        .wu-spin-wheel__close {
+            top: 30px;
+            transform: translateY(0%);
+        }
+
+        .wu-spin-wheel__bodyouter {
+            height: calc(100vh - 350px);
+        }
+
+        // TO alighn the logo to top
+        .wu-spin-wheel__head {
+            flex-direction: column;
+        }
+
+        .price-details {
+            width: 100%;
+            transform: translateX(0%);
+
+            &--hide {
+                display: none !important;
+            }
+
+            &__title {
+                font-size: 35px;
+            }
+
+            &__card {
+
+                &-title {
+                    font-size: 28px;
+                }
+
+                &-price {
+                    font-size: 20px;
+                }
+            }
         }
     }
 }
