luckydraw font upload

--- a/assets/scss/atoms/_button.scss
+++ b/assets/scss/atoms/_button.scss
@@ -11,6 +11,7 @@
    display: flex;
    justify-content: center;
    align-items: center;
+   font-family: 'PP Right Grotesk Wide';
 
    &--black {
       color: $color-yellow;
