--- a/assets/scss/atoms/_titles.scss
+++ b/assets/scss/atoms/_titles.scss
@@ -1,5 +1,6 @@
 .wu-title {
     font-size: 28px;
+    font-family: 'PP Right Grotesk Wide';
     font-weight: $font-medium;
     color: $color-black2;
     text-decoration: none;
