--- a/assets/scss/molecules/_lucky-draw-tile.scss
+++ b/assets/scss/molecules/_lucky-draw-tile.scss
@@ -31,7 +31,8 @@
 
         &--large {
             font-size: 20px;
-            font-weight: $font-semi-bold;
+            font-weight: $font-medium;
+            font-family: 'PP Right Grotesk Wide';
         }
     }
 
