--- a/assets/scss/organisms/_tab.scss
+++ b/assets/scss/organisms/_tab.scss
@@ -17,6 +17,7 @@
         display: block;
         padding: $spacer-2 $spacer-5;
         font-size: 20px;
+        font-family: 'PP Right Grotesk Wide';
         font-weight: $font-medium;
         color: $color-grey;
         white-space: nowrap;
