--- a/assets/scss/organisms/_signinup.scss
+++ b/assets/scss/organisms/_signinup.scss
@@ -1,9 +1,9 @@
-.wu-signinup{
+.wu-signinup {
    position: relative;
    overflow: hidden;
    background-color: $color-yellow;
 
-   &__bg{
+   &__bg {
       position: absolute;
       top: 0;
       left: 0;
@@ -14,13 +14,15 @@
       background-size: cover;
       background-color: $color-yellow;
    }
-   
-   .wu-title{
+
+   .wu-title {
       font-size: 52px;
       text-align: left;
       margin-bottom: $spacer-4;
+      font-family: 'PP Right Grotesk Wide';
    }
-   &__wrap{
+
+   &__wrap {
       position: relative;
       width: 50%;
       display: flex;
@@ -28,14 +30,17 @@
       padding: $spacer-5 $spacer-0;
       z-index: 1;
    }
-   &__content{
+
+   &__content {
       width: 100%;
       position: relative;
+
       // padding-top: $spacer-6;
-      &-wrap{
+      &-wrap {
          width: 100%;
       }
-      &__bg{
+
+      &__bg {
          position: absolute;
          top: 0;
          left: 0;
@@ -47,83 +52,93 @@
          background-color: $color-yellow;
       }
    }
-   &__form{
+
+   &__form {
       width: 100%;
       max-width: 450px;
    }
-   &__act{
+
+   &__act {
       display: flex;
       align-items: center;
       justify-content: flex-start;
 
-      .wu-btn{
+      .wu-btn {
          width: 200px;
       }
    }
-   &__tnc{
+
+   &__tnc {
       display: flex;
       align-items: center;
       justify-content: flex-start;
       margin-bottom: $spacer-3;
-      .wu-checkbox{
+
+      .wu-checkbox {
          margin-right: $spacer-2;
       }
-      .wu-label{
+
+      .wu-label {
          cursor: pointer;
-         a{
+
+         a {
             font-weight: 600;
             color: $color-black2;
-            &:hover{
+
+            &:hover {
                text-decoration: underline;
             }
          }
       }
    }
-   .wu-footer{
+
+   .wu-footer {
       margin-top: -$spacer-3;
    }
 }
 
-@include tablet{
-   .wu-signinup{
-      &__form{
+@include tablet {
+   .wu-signinup {
+      &__form {
          max-width: 300px;
       }
    }
 }
 
-@include mobile{
-   .wu-signinup{
-      .content-wrapper{
+@include mobile {
+   .wu-signinup {
+      .content-wrapper {
          padding: 0;
       }
-      &__bg{
+
+      &__bg {
          background-image: none !important;
       }
 
-      .wu-title{
+      .wu-title {
          font-size: 30px;
          margin-bottom: $spacer-4;
          color: $color-white;
       }
 
-      &__content{
+      &__content {
          min-height: 450px;
-         &-wrap{
+
+         &-wrap {
             width: 80%;
             position: relative;
             color: $color-white;
-            padding:  $spacer-4 $spacer-3;
+            padding: $spacer-4 $spacer-3;
 
          }
       }
 
-      &__wrap{
+      &__wrap {
          width: 100%;
          padding-top: 0;
       }
 
-      &__form{
+      &__form {
          padding: $spacer-0 $spacer-3;
       }
    }
