--- a/assets/scss/organisms/_spin-wheel.scss
+++ b/assets/scss/organisms/_spin-wheel.scss
@@ -1,4 +1,5 @@
 .wu-spin-wheel {
+    font-family: 'Roboto', sans-serif;
     background-color: $color-black;
     height: calc(100vh + 50px);
     overflow: hidden;
@@ -142,9 +143,13 @@
         border-bottom: 1px solid $color-black;
         padding-bottom: $spacer-3;
 
-        h4 {
+        h4,
+        h3,
+        h2,
+        h1 {
             font-size: 35px;
-            font-weight: $font-bold;
+            font-weight: $font-black;
+            font-family: 'PP Right Grotesk Wide';
         }
     }
 
@@ -265,12 +270,17 @@
         padding: $spacer-1 $spacer-3;
         margin-top: $spacer-3;
         cursor: pointer;
-        font-weight: $font-bold;
+        font-weight: $font-black;
         color: $color-black;
         font-size: 22px;
+        // font-family: 'Lalezar', cursive;
+        font-family: 'PP Right Grotesk Wide';
+        letter-spacing: 1.5px;
+        line-height: 1.2;
         border: 1px solid $color-yellow;
         transition: 0.3s;
-        display: block;
+        display: flex;
+        align-items: center;
 
         &:hover {
             color: $color-yellow;
@@ -485,14 +495,17 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        transform: translateX(-10%);
+        transform: translateX(-16%);
 
         &--hide {
             display: none !important;
         }
 
         &__title {
-            font-size: 40px;
+            font-family: 'PP Right Grotesk Wide';
+            // font-family: 'Lalezar', cursive;
+            letter-spacing: 1px;
+            font-size: 35px;
             font-weight: 900;
             margin-bottom: 16px;
             text-transform: capitalize;
@@ -512,7 +525,7 @@
             height: auto;
             margin: 0 8px;
             overflow: hidden;
-            border-radius: 30px;
+            border-radius: 15px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -536,15 +549,18 @@
                 height: 100%;
                 position: relative;
                 flex: 1 1 auto;
-                padding: 24px;
+                padding: 24px 32px;
 
             }
 
             &-title {
-                font-size: 30px;
+                font-size: 26px;
                 font-weight: 800;
                 margin-bottom: 8px;
                 color: $color-yellow;
+                // font-family: 'Lalezar', cursive;
+                font-family: 'PP Right Grotesk Wide';
+                letter-spacing: 1px;
             }
 
             &-price {
@@ -599,7 +615,11 @@
         }
 
         &__sidehead {
-            h4 {
+
+            h4,
+            h3,
+            h2,
+            h1 {
                 font-size: 90px;
             }
 
@@ -808,7 +828,11 @@
         }
 
         &__sidehead {
-            h4 {
+
+            h4,
+            h3,
+            h2,
+            h1 {
                 font-size: 50px;
             }
 
@@ -916,7 +940,7 @@
             &__card {
 
                 &-cnt {
-                    padding: 35px;
+                    padding: 35px 50px;
 
                 }
 
