--- a/assets/scss/organisms/_spin-wheel.scss
+++ b/assets/scss/organisms/_spin-wheel.scss
@@ -231,7 +231,7 @@
 
     &__spinner {
         position: relative;
-        z-index: -1;
+        z-index: 2;
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
@@ -490,6 +490,24 @@
         }
     }
 
+    &__spinwords {
+        font-size: 20px;
+        color: $color-white;
+        opacity: 0;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        z-index: 1;
+        // animation-name: spin;
+        // animation-iteration-count: infinite;
+        // animation-timing-function: linear;
+        // animation-delay: 1s;
+        // transition: transform 3s ease-in-out;
+        // transition-duration: 20s;
+        // animation-duration: 2000ms;
+        // transition: 0.9s;
+    }
+
     // stop class
     // &--stop {
     //     .wu-spin-wheel__spinner {
@@ -604,13 +622,14 @@
 
 // @keyframes spin {
 //     0% {
-//         transform: rotate(0deg);
-//         animation-duration: 4000ms;
+//         transform: translate(0%, 0%) rotate(0deg);
+//         opacity: 1;
+
 //     }
 
 //     100% {
-//         transform: rotate(360deg);
-//         animation-duration: 4000ms;
+//         transform: translate(200%, 1000%) rotate(50deg);
+//         opacity: 0.6;
 //     }
 // }
 
