spin-weel-bg-animation

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -37,4 +37,5 @@
 @import "./organisms/yes";
 @import "organisms/lucky-draw-page";
 @import "organisms/spin-wheel";
+@import "./organisms/spin-weel-bg-animation";
 // pages
