spin-weel-bg-animation updation

--- a/assets/scss/organisms/_spin-weel-bg-animation.scss
+++ b/assets/scss/organisms/_spin-weel-bg-animation.scss
@@ -1,5 +1,7 @@
-.test{
+.spinWeelBg_name{
     display: inline-block;
+    font-size: 22px;
+    font-weight: 600;
     padding: 16px;
     color: transparent;
     position: absolute;
@@ -24,13 +26,13 @@
 
 }
 
-.test-block{
-    width: 97vw;
-    height: 100vh;
-    background-color: red;
-    position: relative;
-    overflow: hidden;
-    margin: 0 auto;
+.spinWeelBg_body{
+    // width: 97vw;
+    // height: 100vh;
+    // background-color: red;
+    // position: relative;
+    // overflow: hidden;
+    // margin: 0 auto;
 }
 
 
