--- a/assets/scss/organisms/_spin-weel-bg-animation.scss
+++ b/assets/scss/organisms/_spin-weel-bg-animation.scss
@@ -1,4 +1,4 @@
-.spinWeelBg_name{
+.spinWeelBg_name {
     display: inline-block;
     font-size: 22px;
     font-weight: 600;
@@ -9,24 +9,29 @@
     top: -50px;
 
     // variables
-    
+
     --anime-top-pos1: 0%;
     --anime-top-pos2: 0%;
     --anime-top-pos3: 0%;
     --anime-top-pos4: 0%;
     --anime-top-pos5: 0%;
 
-    &--mod{
+    &--mod {
         width: auto;
         color: #fff;
-        animation: drops 20s 2s 20;
         border-radius: 10px;
         text-align: center;
     }
 
 }
 
-.spinWeelBg_body{
+.wu-spin-wheel--anim {
+    .spinWeelBg_name--mod {
+        animation: drops 5s 0s 5;
+    }
+}
+
+.spinWeelBg_body {
     // width: 97vw;
     // height: 100vh;
     // background-color: red;
@@ -37,23 +42,27 @@
 
 
 @keyframes drops {
-    20%{
-        opacity: .5;
+    20% {
+        opacity: 1;
         top: var(--anime-top-pos1);
     }
-    40%{
-        opacity: .7;
+
+    40% {
+        opacity: 1;
         top: var(--anime-top-pos2);
     }
-    60%{
+
+    60% {
         opacity: 1;
         top: var(--anime-top-pos3);
     }
-    80%{
+
+    80% {
         opacity: 1;
         top: var(--anime-top-pos4);
     }
-    100%{
+
+    100% {
         opacity: 1;
         top: var(--anime-top-pos5);
     }
