--- a/assets/scss/organisms/_header.scss
+++ b/assets/scss/organisms/_header.scss
@@ -79,6 +79,37 @@
       background-image: url("../images/hamburg-black.svg");
     }
   }
+
+  &__rightnav {
+    display: flex;
+    align-items: center;
+  }
+
+  &__lang {
+    margin-left: $spacer-2;
+    display: flex;
+    align-items: center;
+
+    span {
+      font-size: 20px;
+      color: $color-black;
+    }
+  }
+
+  &__langicon {
+    width: 25px;
+    height: 25px;
+    margin-right: $spacer-1;
+
+    svg {
+      width: 100%;
+      height: 100%;
+
+      path {
+        fill: $color-black;
+      }
+    }
+  }
 }
 
 @include mobile-tablet {
@@ -108,6 +139,30 @@
         border: none;
         box-shadow: none;
       }
+    }
+
+    &__lang {
+      margin-right: $spacer-3;
+
+      span {
+        font-size: 25px;
+      }
+    }
+
+    .container-fluid {
+      .wu-header__logo {
+        order: 1;
+      }
+
+      .wu-header__rightnav,
+      .navbar-toggler {
+        order: 2;
+      }
+
+      .navbar-collapse {
+        order: 3;
+      }
+
     }
   }
 }
@@ -147,6 +202,41 @@
         .nav-link {
           color: $color-white;
         }
+      }
+    }
+
+    &__lang {
+      margin-right: $spacer-3;
+
+      span {
+        color: $color-yellow;
+        font-size: 20px;
+      }
+    }
+
+    &__langicon {
+      width: 22px;
+      height: 22px;
+
+      svg {
+        path {
+          fill: $color-yellow;
+        }
+      }
+    }
+
+    .container-fluid {
+      .wu-header__logo {
+        order: 1;
+      }
+
+      .wu-header__rightnav,
+      .navbar-toggler {
+        order: 2;
+      }
+
+      .navbar-collapse {
+        order: 3;
       }
     }
   }
