--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -38,4 +38,5 @@
 @import "organisms/lucky-draw-page";
 @import "organisms/spin-wheel";
 @import "./organisms/spin-weel-bg-animation";
+@import "./organisms/happines-rwd";
 // pages
