--- a/assets/scss/organisms/_signinup.scss
+++ b/assets/scss/organisms/_signinup.scss
@@ -141,5 +141,10 @@
       &__form {
          padding: $spacer-0 $spacer-3;
       }
+
+      // .mo-btn {
+      //    width: 100%;
+      //    margin-top: $spacer-4;
+      // }
    }
 }
