--- a/assets/scss/molecules/_share-modal.scss
+++ b/assets/scss/molecules/_share-modal.scss
@@ -105,9 +105,18 @@
         margin: 0 $spacer-2 $spacer-2;
         transition: 0.3s;
 
+        &.hide {
+            display: none !important;
+        }
+
+        &.mobile-only {
+            display: none;
+        }
+
         // border: 2px solid $color-yellow;
         // border-radius: 50%;
         // padding: 10px;
+
         &:hover {
             transform: scale(1.1);
             transition: 0.3s;
@@ -126,6 +135,12 @@
             display: flex;
             justify-content: center;
             margin: 16px;
+        }
+
+        &__icon {
+            &.mobile-only {
+                display: flex;
+            }
         }
     }
 }
