--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,6 +23,7 @@
 @import "./molecules/share-modal";
 @import "./molecules/lucky-draw-tile";
 @import "./molecules/free-gift-tile";
+@import "./molecules/notification-modal";
 
 // organisms
 @import "./organisms/welcome";
