--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -40,4 +40,5 @@
 @import "organisms/spin-wheel";
 @import "./organisms/spin-weel-bg-animation";
 @import "./organisms/happines-rwd";
+@import "./organisms/mini-banner";
 // pages
