--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -3,7 +3,9 @@ $color-black2: #0a0005;
 $color-white: #ffffff;
 $color-white2: #f5f5fa;
 $color-yellow: #ffdd00;
+$color-green: #04624C;
 $color-grey: #756f75;
 $color-grey2: #f5f5fa;
 $color-grey3: #756f7580;
+$color-grey4: #636363;
 $color-blue: #94cbf2;
