--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -24,6 +24,8 @@
 @import "./molecules/lucky-draw-tile";
 @import "./molecules/free-gift-tile";
 @import "./molecules/notification-modal";
+@import "./molecules/referal-tile";
+@import "./molecules/reward-tile";
 
 // organisms
 @import "./organisms/welcome";
