--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -41,4 +41,5 @@
 @import "./organisms/spin-weel-bg-animation";
 @import "./organisms/happines-rwd";
 @import "./organisms/mini-banner";
+@import "./organisms/qr-referal";
 // pages
