--- a/assets/scss/organisms/_mini-banner.scss
+++ b/assets/scss/organisms/_mini-banner.scss
@@ -1,6 +1,149 @@
 .wu-minibanner {
     min-height: 350px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    position: relative;
+
+    &__bg {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: left;
+    }
+
+    &__outer {
+        min-height: 350px;
+        display: flex;
+        justify-content: center;
+    }
+
+    &__cnt {
+        width: 80%;
+        margin-top: auto;
+        position: relative;
+        z-index: 2;
+        display: flex;
+        align-items: center;
+        height: 100%;
+        // padding: 40px 0;
+
+    }
+
+    &__left {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+        transform: translateY(50px);
+
+        .wu-title {
+            width: 80%;
+            font-size: 50px;
+
+            span {
+                font-family: 'PP Eiko';
+            }
+        }
+    }
+
+    &__right {
+        width: 50%;
+        display: flex;
+        justify-content: center;
+
+        img {
+            width: 100%;
+            height: auto;
+            // display: block;
+            max-width: 400px
+        }
+    }
+
+    &--white {
+        .wu-minibanner__right {
+
+            img {
+                max-width: 350px;
+            }
+        }
+    }
+}
+
+@include tablet {
+    .wu-minibanner {
+        min-height: 250px;
+
+        &__outer {
+            min-height: 250px;
+            display: flex;
+        }
+
+        &__cnt {
+            margin-top: auto;
+            width: 75%;
+            justify-content: center;
+        }
+
+        &__left {
+            transform: translateY(0px);
+            margin-right: 16px;
+
+            .wu-title {
+                width: 100%;
+                font-size: 30px;
+            }
+        }
+
+        &__right {
+            width: 35%;
+        }
+
+        &--white {
+            .wu-minibanner__right {
+                // transform: translateY(-50px);
+
+                img {
+                    max-width: 300px;
+                    min-width: 230px;
+                }
+            }
+        }
+    }
+}
+
+@include mobile {
+    .wu-minibanner {
+        min-height: 250px;
+
+        &__outer {
+            min-height: 250px;
+            display: flex;
+        }
+
+        &__cnt {
+            margin-top: auto;
+            width: 85%;
+
+        }
+
+        &__left {
+            transform: translateY(0px);
+            margin-right: 16px;
+
+            .wu-title {
+                width: 100%;
+                font-size: 25px;
+            }
+        }
+
+        &--white {
+            .wu-minibanner__right {
+                transform: translateY(-50px);
+
+                img {
+                    max-width: 300px;
+                    min-width: 200px;
+                }
+            }
+        }
+    }
 }
