--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -3,6 +3,7 @@ $color-black2: #0a0005;
 $color-white: #ffffff;
 $color-white2: #f5f5fa;
 $color-yellow: #ffdd00;
+$color-yellow2: #B35F00;
 $color-green: #04624C;
 $color-grey: #756f75;
 $color-grey2: #f5f5fa;
