--- a/assets/scss/molecules/_referal-tile.scss
+++ b/assets/scss/molecules/_referal-tile.scss
@@ -20,10 +20,9 @@
         }
     }
 
-    &__name {
-        color: $color-black;
+    .wu-title {
         text-align: center;
-        font-size: 22px;
+        font-size: 24px;
         font-weight: 900;
     }
 
@@ -33,15 +32,18 @@
         justify-content: space-between;
     }
 
-    &__txt {
+    .wu-para {
         color: $color-grey4;
-        font-size: 14px;
+        font-size: 16px;
         font-weight: 400;
     }
 
-    &__greentxt {
+    &__green {
         color: $color-green;
         font-size: 14px;
         font-weight: 400;
+        &--red {
+            color: $color-yellow2;
+        }
     }
 }
