--- a/assets/scss/molecules/_referal-tile.scss
+++ b/assets/scss/molecules/_referal-tile.scss
@@ -37,6 +37,7 @@
         color: $color-grey4;
         font-size: 16px;
         font-weight: 400;
+        width: 100% !important;
     }
 
     &__green {
