feat: qr code scanner page

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -44,4 +44,5 @@
 @import "./organisms/happines-rwd";
 @import "./organisms/mini-banner";
 @import "./organisms/qr-referal";
+@import "./organisms/qr-scanner";
 // pages
