--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -45,4 +45,8 @@
 @import "./organisms/mini-banner";
 @import "./organisms/qr-referal";
 @import "./organisms/qr-scanner";
+@import "./organisms/register";
+
+
+
 // pages
