updated as of 22-11-24

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -45,6 +45,7 @@
 @import "./organisms/mini-banner";
 @import "./organisms/qr-referal";
 @import "./organisms/qr-scanner";
+@import "./organisms/loyaltyprgrm";
 
 
 // pages
