--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -46,6 +46,8 @@
 @import "./organisms/qr-referal";
 @import "./organisms/qr-scanner";
 @import "./organisms/loyaltyprgrm";
+@import "./organisms/loyaltyprgrm-form";
+@import "./organisms/loyaltyprgrm-reward";
 
 
 // pages
