--- a/assets/scss/organisms/_loyaltyprgrm-form.scss
+++ b/assets/scss/organisms/_loyaltyprgrm-form.scss
@@ -12,21 +12,26 @@
         padding: 20px;
         background-color: #000;
         margin-bottom: 20px;
+        border-top: none;
+        border-bottom-left-radius: 10px;
+        border-bottom-right-radius: 10px;
     }
 
     &__outer {
         background-color: #ffdd00;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 
     &__txtcontainer {
         padding: 20px 20px;
-        width: 100%;
+        width: 50%;
         display: flex;
         flex-direction: column;
 
         &--b {
             .wu-lyprgrmform__input {
-                border-radius: unset;
                 border: 1px solid #b8b8b8;
             }
         }
@@ -45,6 +50,14 @@
         color: #000;
         border-radius: 10px;
         border: 1px solid #b8b8b8;
+        width: 100%;
+        box-shadow: 0 0 5px rgba(28, 51, 78, 0.5);
+        height: 40px;
+
+        &::placeholder {
+            color: #000;
+            font-size: 14px;
+        }
     }
 
     &__btn {
@@ -53,16 +66,39 @@
         font-size: 16px;
         font-weight: 600;
         padding: 10px 40px;
-        margin: 20px 0px 0px 20px;
         height: 44px;
         border-radius: 20px;
         border: 2px solid #1C334E;
         transition: 0.3s ease-in-out;
+        box-shadow: 0 0 5px rgba(28, 51, 78, 0.5);
 
         &:hover {
             color: #0a0005;
             background-color: #ffdd00;
             border: 2px solid #0a0005;
+        }
+    }
+
+    &__btnouter {
+        width: 47%;
+        display: flex;
+        margin-top: 20px;
+        justify-content: flex-end;
+    }
+}
+
+@include tablet-pro {
+    .wu-lyprgrmform {
+        &__uppertxt {
+            width: 60%;
+        }
+    }
+}
+
+@include tablet {
+    .wu-lyprgrmform {
+        &__uppertxt {
+            width: 60%;
         }
     }
 }
@@ -71,6 +107,14 @@
     .wu-lyprgrmform {
         &__txtcontainer {
             padding: 15px 0px;
+        }
+
+        &__btnouter {
+            width: 100%;
+        }
+
+        &__txtcontainer {
+            width: 100%;
         }
     }
 }
