--- a/assets/scss/organisms/_loyaltyprgrm-reward.scss
+++ b/assets/scss/organisms/_loyaltyprgrm-reward.scss
@@ -24,117 +24,17 @@
         }
     }
 
-    .modal {
-        display: none;
-        position: fixed;
-        z-index: 1000;
-        background-color: rgba(0, 0, 0, 0.5);
-        border-radius: 10px;
-        padding: 20px;
-      }
-  
-  .modal-dialog {
-    background-color: #fff;
-    margin: 0;
-    padding: 20px;
-    border-radius: 8px;
-    position: absolute;
-    z-index: 1001;
-    opacity: 1;
-  }
-  
-  .overlay {
-    background-color: rgba(0, 0, 0, 0.5);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-  }
-  
-  /* Fade out the gift box when the modal is opened */
-  .wu-loyaltyprgrm__giftwrap {
-    transition: opacity 0.3s ease-in-out;
-  }
-
-  .faded {
-    opacity: 0.5;
-  }
-
-  .wu-gift__cnt {
-    padding-bottom: 0px;
-  }
-
-  .wu-gift {
-    padding-bottom: 0;
-  }
-}
-
-    #wu_lypopup1 {
-        max-width: 280px;
-        margin: unset;
-        height: auto;
-
-        .modal-content {
-            padding: 20px;
-            text-align: center;
-            background-color: #f5f5fa;
-          }
-          
-          .modal-bodya, .modal-bodyb {
-            font-size: 14px;
-            color: #000;
-          }
-        
-          .modal-bodya {
-            padding-bottom: 10px;
-            font-weight: 600;
-          }
+    .fade {
+      opacity: 0.5;
+      transition: opacity 0.5s ease;
     }
 
-    #wu_lypopup2 {
-        max-width: 280px;
-        margin: unset;
-        height: auto;
-
-        .modal-content {
-            padding: 20px;
-            text-align: center;
-            background-color: #f5f5fa;
-          }
-          
-          .modal-bodya, .modal-bodyb {
-            font-size: 14px;
-            color: #000;
-          }
-        
-          .modal-bodya {
-            padding-bottom: 10px;
-            font-weight: 600;
-          }
+    .wu-loyaltyprgrm__containerwrap {
+      flex-wrap: wrap;
     }
+  }
+ 
 
-    @include tablet-pro {
-      #wu_lypopup1 {
-        max-width: 220px;
-      }
-
-      #wu_lypopup2 {
-        max-width: 220px;
-        left: 285px !important;
-      }
-    }
-
-    @include tablet {
-      #wu_lypopup1 {
-        max-width: 175px;
-      }
-
-      #wu_lypopup2 {
-        max-width: 175px;
-      }
-    }
 
     @include mobile {
 
@@ -149,13 +49,6 @@
           line-height: 24px;
         }
       }
-
-      #wu_lypopup1 {
-        max-width: 44%;
-      }
-
-      #wu_lypopup2 {
-        max-width: 44%;
-      }
+    
     }
 
