--- a/assets/scss/organisms/_loyaltyprgrm-reward.scss
+++ b/assets/scss/organisms/_loyaltyprgrm-reward.scss
@@ -1,5 +1,13 @@
 .wu-lyrewards {
 
+  .wu-title {
+    margin-bottom: 30px;
+  }
+
+  &__outer {
+    margin: 30px 0px;
+  }
+
     &__subhead {
         font-size: 20px;
         color: #5395FC;
@@ -17,21 +25,26 @@
 
     &__giftwrapouter {
         width: 25%;
-        
-        .wu-loyaltyprgrm__giftwrap {
-            width: 100%;
-            padding: 20px 10px 0px;
-        }
     }
+
+    &__giftwrap {
+      width: 100%;
+      padding: 20px 10px 0px;
+  }
 
     .fade {
       opacity: 0.5;
       transition: opacity 0.5s ease;
     }
 
-    .wu-loyaltyprgrm__containerwrap {
+    &__containerwrap {
+      width: 100%;
+      display: flex;
       flex-wrap: wrap;
+      padding: 10px 0px;
     }
+
+   
   }
  
 
